<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Location Found -->
    <item android:id="@+id/action_location_found"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/locked"
        app:showAsAction="ifRoom" />


    <!-- Refresh -->
    <item android:id="@+id/action_refresh"
        android:icon="@android:drawable/ic_menu_rotate"
        android:title="@string/refresh"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_new"
        android:icon="@android:drawable/ic_menu_help"
        android:title="New"
        app:showAsAction="never"/>
    <!-- Help -->
    <item android:id="@+id/action_help"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/help"
        app:showAsAction="never"/>



</menu>